refactor: adjust the database.go and refactor the services and handlers
Changed the ConnectDB in every function to use dependency injection.
