# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/transactions": {
+        "/transfers": {
             "post": {
                 "description": "Transfers a specified amount from the payer to the payee",
                 "consumes": [
@@ -14,17 +14,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "transactions"
+                    "transferss"
                 ],
                 "summary": "Transfer funds between users",
                 "parameters": [
                     {
                         "description": "Transaction details",
-                        "name": "transaction",
+                        "name": "transfer",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Transaction"
+                            "$ref": "#/definitions/models.Transfer"
                         }
                     }
                 ],
@@ -32,7 +32,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.Transaction"
+                            "$ref": "#/definitions/models.Transfer"
                         }
                     },
                     "400": {
@@ -166,7 +166,7 @@
         },
         "/wallets/withdraw": {
             "post": {
-                "description": "Withdraws a specified amount from the wallet identified by WalletID.",
+                "description": "Withdraw a specified amount from a wallet",
                 "consumes": [
                     "application/json"
                 ],
@@ -176,10 +176,10 @@
                 "tags": [
                     "wallets"
                 ],
-                "summary": "Withdraw balance from wallet",
+                "summary": "Withdraw from wallet",
                 "parameters": [
                     {
-                        "description": "Balance Request",
+                        "description": "Withdrawal request body",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -190,7 +190,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Wallet with updated balance",
+                        "description": "Updated wallet after withdrawal",
                         "schema": {
                             "$ref": "#/definitions/models.Wallet"
                         }
@@ -267,7 +267,7 @@
                 }
             }
         },
-        "models.Transaction": {
+        "models.Transfer": {
             "type": "object",
             "properties": {
                 "createdAt": {
