# internal/models/models.go
@@ -22,7 +22,7 @@ type Wallet struct {
 	CreatedAt	time.Time		`gorm:"default:CURRENT_TIMESTAMP"`
 }
 
-type Transaction struct {
+type Transfer struct {
 	ID			uuid.UUID		`gorm:"type:uuid;primaryKey;default:uuid_generate_v4()"`
 	Value		float64			`gorm:"not null"`
 	PayerID		uuid.UUID		`gorm:"type:uuid;not null"`
